update style openning title more responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name="author" content="Aliaksandr Povad">
         <meta name="contact" content="contact@ialexpovad.net">
         <meta name="license" content="GNU GENERAL PUBLIC LICENSE">
-        
+
         <link href="./css/main.min.css" rel="stylesheet">
     </head>
     
@@ -23,7 +23,7 @@
         <section class="opening">
             <h1 class="opening-title">
                 <span>Маргарита</span>
-                <span>·</span>
+                <span>·</span><br>
                 <span>Александр</span>
             </h1>
         </section>
