--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="opening">
             <h1 class="opening-title">
                 <span>Маргарита</span>
-                <span>·</span><br>
+                <span>·</span>
                 <span>Александр</span>
             </h1>
         </section>
