--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <body>
         <section class="opening">
             <h1 class="opening-title">
-                <span>Маргарита</span>
-                <span>·</span>
-                <span>Александр</span>
+                Маргарита & 
+                <br>
+                <br> 
+                Александр
             </h1>
         </section>
         <div class="text">
