--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
     <body>
         <section class="opening">
             <h1 class="opening-title">
-                Маргарита & 
+                ПРИГЛАШЕНИЕ НА 
                 <br>
-                <br> 
-                Александр
+                <br>
+                СВАДЬБУ
             </h1>
         </section>
         <div class="text">
             <p class="text-big">
-                Мы приняли важное решение -<br>мы очень скоро станем семьей!</br>
+                Мы, Маргарита и Александр,
+                <br> 
+                приняли важное решение -<br>мы очень скоро станем семьей!</br>
             </p>
         </div>
         <figure class="date">
