--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <body>
         <section class="opening">
             <h1 class="opening-title">
-                ПРИГЛАШЕНИЕ НА 
+                ПРИГЛАШЕНИЕ
                 <br>
                 <br>
-                СВАДЬБУ
+                НА СВАДЬБУ
             </h1>
         </section>
         <div class="text">
