--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
         </div>
         <div class="text">
             <p class="text-big">
-                Церемония и ужин<br> с 15:40
+                Церемония<br> в 15:40
+            </p>
+            <p class="text-big">
+                Ужин<br> в 17:00
             </p>
             <p>
                 <a href="http://la-scala.by" class="Gusto" target="_blank">La Scala</a>
